sprint6 베이스코드 적용