@@ -1,92 +1,45 @@
 package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.Channel;
-import com.sprint.mission.discodeit.entity.ChannelType;
-import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.repository.interfacepac.ChannelRepository;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
+import java.util.*;
+
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
+@Repository
 public class JCFChannelRepository implements ChannelRepository {
-    private final Map<User, List<Channel>> channelData;
 
-    public JCFChannelRepository() {
-        this.channelData = new HashMap<>();
-    }
+  private final Map<UUID, Channel> data;
 
+  public JCFChannelRepository() {
+    this.data = new HashMap<>();
+  }
 
-    @Override
-    public Channel save(Channel channel) {
-        List<Channel> channels = new ArrayList<>();
-        channels.add(channel);
-        channelData.put(channel.getOwner(), channels);
-        return channel;
-    }
+  @Override
+  public Channel save(Channel channel) {
+    this.data.put(channel.getId(), channel);
+    return channel;
+  }
 
-    @Override
-    public Optional<Channel> findById(UUID id) {
-        return Optional.ofNullable(channelData.values().stream()
-                .flatMap(List::stream)
-                .filter(channel -> channel.getId().equals(id))
-                .findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("Not found Channel ")));
-    }
+  @Override
+  public Optional<Channel> findById(UUID id) {
+    return Optional.ofNullable(this.data.get(id));
+  }
 
-    @Override
-    public List<Channel> findAll() {
-        return channelData.values().stream()
-                .flatMap(List::stream)
-                .collect(Collectors.toList());
-    }
+  @Override
+  public List<Channel> findAll() {
+    return this.data.values().stream().toList();
+  }
 
+  @Override
+  public boolean existsById(UUID id) {
+    return this.data.containsKey(id);
+  }
 
-    @Override
-    public void deleteByChannel(Channel channel) {
-        List<Channel> channels = channelData.get(channel.getOwner());
-        if(channels != null) {
-            channels.remove(channel);
-            if(channels.isEmpty()) {
-                channelData.remove(channel.getOwner());
-            }
-        }
-    }
-
-
-    @Override
-    public boolean existsByUser(User user) {
-        return channelData.values().stream()
-                .flatMap(List::stream)
-                .anyMatch(channel -> channel.getOwner().equals(user));
-    }
-
-
-    @Override
-    public List<Channel> findAllByType(ChannelType type) {
-        return channelData.values().stream()
-                .flatMap(List::stream)
-                .filter(channel -> channel.getType() ==type)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Channel> findAllByOwnerAndType(User owner, ChannelType type) {
-        return channelData.getOrDefault(owner, new ArrayList<>())
-                .stream()
-                .filter(channel -> channel.getType() == type)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Channel> findAllByUserId(UUID userId) {
-        return channelData.values().stream()
-                .flatMap(List::stream)
-                .filter(channel -> channel.getOwner().getId().equals(userId)|
-                        (channel.getType() == ChannelType.PRIVATE))
-                .collect(Collectors.toList());
-    }
+  @Override
+  public void deleteById(UUID id) {
+    this.data.remove(id);
+  }
 }
