@@ -1,69 +1,52 @@
 package com.sprint.mission.discodeit.repository.jcf;
 
-import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
-import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.repository.interfacepac.MessageRepository;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
+import java.util.*;
+
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
+@Repository
 public class JCFMessageRepository implements MessageRepository {
 
-  private final Map<User, List<Message>> messageData;
-  ;
+  private final Map<UUID, Message> data;
 
   public JCFMessageRepository() {
-    this.messageData = new HashMap<>();
+    this.data = new HashMap<>();
   }
 
   @Override
   public Message save(Message message) {
-    messageData.computeIfAbsent(message.getUser(), k -> new ArrayList<>()).add(message);
+    this.data.put(message.getId(), message);
     return message;
   }
 
   @Override
   public Optional<Message> findById(UUID id) {
-    return Optional.ofNullable(messageData.values().stream()
-        .flatMap(List::stream)
-        .filter(message -> message.getId().equals(id))
-        .findFirst()
-        .orElseThrow(() -> new IllegalArgumentException("Not found Message")));
-  }
-
-  @Override
-  public List<Message> findAll() {
-    List<Message> allMessages = new ArrayList<>();
-    messageData.values().forEach(allMessages::addAll);
-    return allMessages;
+    return Optional.ofNullable(this.data.get(id));
   }
 
   @Override
   public List<Message> findAllByChannelId(UUID channelId) {
-    return messageData.values().stream()
-        .flatMap(List::stream)
-        .filter(message -> message.getChannel().getId().equals(channelId))
-        .collect(Collectors.toList());
-  }
-
-
-  @Override
-  public void deleteByChannel(Channel channel) {
-    messageData.values()
-        .forEach(
-            allMessages -> allMessages.removeIf(message -> message.getChannel().equals(channel)));
+    return this.data.values().stream().filter(message -> message.getChannelId().equals(channelId))
+        .toList();
   }
 
   @Override
-  public void deleteById(UUID messageId) {
-    messageData.values()
-        .forEach(messages
-            -> messages.removeIf(message -> message.getId().equals(messageId)));
+  public boolean existsById(UUID id) {
+    return this.data.containsKey(id);
   }
-    
+
+  @Override
+  public void deleteById(UUID id) {
+    this.data.remove(id);
+  }
+
+  @Override
+  public void deleteAllByChannelId(UUID channelId) {
+    this.findAllByChannelId(channelId)
+        .forEach(message -> this.deleteById(message.getId()));
+  }
 }
